--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,7 +25,7 @@ dependencies = [
 ]
 
 [project.scripts]
-imc-prosperity-3 = "imc_prosperity_3.__main__:main"  # Script entry point; adjust module/package names accordingly
+imc-prosperity-3 = "prosperity3submit.main:main"  # Script entry point; adjust module/package names accordingly
 
 [project.urls]
 Repository = "https://github.com/UlrichVestuche/IMC-Prosperity-3"
